force-app/main/default/objects/ClientOffer__c/ClientOffer__c.object-meta.xml
<CustomObject>
    <label>Client Offer</label>
    <nameField>
        <displayFormat>CO-{YY}{MM}{0000}</displayFormat>
        <label>Client Offer No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>