force-app/main/default/objects/ClientOffer__c/fields/OriginalCost__c.field-meta.xml
<CustomField>
    <fullName>OriginalCost__c</fullName>
    <label>Original Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>