force-app/main/default/objects/ClientOffer__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Client Offers</relationshipLabel>
    <relationshipName>Client_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>