force-app/main/default/objects/ClientOffer__c/fields/PromotionMaster__c.field-meta.xml
<CustomField>
    <fullName>PromotionMaster__c</fullName>
    <label>Promotion Master</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PromotionMaster__c.Source__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PromotionMaster__c</referenceTo>
    <relationshipLabel>Client Offers</relationshipLabel>
    <relationshipName>Client_Offers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>