force-app/main/default/objects/ClientOffer__c/fields/PromotionType__c.field-meta.xml
<CustomField>
    <fullName>PromotionType__c</fullName>
    <formula>Text(PromotionMaster__r.PromotionType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Type</label>
    <type>Text</type>
</CustomField>