force-app/main/default/objects/ClientOffer__c/validationRules/Check_Original_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Original_Cost</fullName>
    <active>true</active>
    <description>if Original Cost &gt; 0, Cannot input cost.</description>
    <errorConditionFormula>AND(
  OriginalCost__c != 0,
   Not ISNULL(Cost__c) 
)</errorConditionFormula>
    <errorDisplayField>Cost__c</errorDisplayField>
    <errorMessage>Please remove value from Cost.</errorMessage>
</ValidationRule>