force-app/main/default/objects/ClientOffer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PromotionMaster__c</columns>
    <columns>PromotionType__c</columns>
    <columns>OriginalCost__c</columns>
    <columns>Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>